--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,9 +12,9 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$K.6SZNKkOMXg9rhnwT/nU.GuqYNJztNdVyy1E9/JSdJXIhPTz/IMq"
+# 	- password: java.lang.String = "$2a$05$Y72uIh8J4gXx2voKmLrf3OfDHTh3frHusPJ22Mw70chC9YCDqK0CW"
 # 	- enabled: boolean = false
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -43,9 +43,9 @@ authenticatedUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "tester"
-# 	- password: java.lang.String = "$2a$05$KuC6WgJTSR3oG7IK8UXVIeOMZ/goGAFhoSyxqoF7IwObLCmvdojzi"
+# 	- password: java.lang.String = "$2a$05$XQWcTSGppyZQcqUzecPgCe5ukAri6NPtmpaEuNrVu6XVY2QcCCfwO"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Tester, surname=Acme.com, email=tester@acme.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Tester, surname=Acme.com, email=tester@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Authenticated{id=4, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -74,9 +74,9 @@ administratorUserAccount=5
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$1B9NmHGgc8EhwZUXkhvui.Jp0QGLM4K5x8wMPu5TByK32OGdKo/MO"
+# 	- password: java.lang.String = "$2a$05$IF/pu.0cxHCqGwiWhTAss.uVK4p58RmfsbMUYMJGQ0CnfNoPhkgxm"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=6, version=0}, acme.framework.entities.Authenticated{id=7, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -560,9 +560,9 @@ employer1UserAccount=37
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$iRVwcvh95IhybWi1E1TPC..OtyZcYYlPJTn6ajfmKoapHJuLu/Pdy"
+# 	- password: java.lang.String = "$2a$05$/D.FiY.FKLTZgv/0GmRSHumFRYELz6mIjSMkqvDcipoN/kIw/2q4K"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com, phone=<<+183 (14) 937403629>>)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=38, version=0}, acme.framework.entities.Authenticated{id=39, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -607,9 +607,9 @@ employer2UserAccount=40
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$l2KDe/T/gkXPbUb8QygpPOIh0N9R4l4qSSdgLPR37ATE7kh..0vJO"
+# 	- password: java.lang.String = "$2a$05$9fRvZnc6.bJIkhNiGKvBHOx3/7t/BJXdY0wafaehwJNt1Wrw4L1LK"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@acme.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=41, version=0}, acme.framework.entities.Authenticated{id=42, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -654,9 +654,9 @@ worker1UserAccount=43
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$BB5Z9D099kTs/qkvaG9wEuoAy.y8UtkIu1nMSqEfFYIBNrU2XfMIi"
+# 	- password: java.lang.String = "$2a$05$1ZusMFh9Ztn8O1DlJXDI0OF/C6zxVV24lIH9zOKs2Ooju/CtFIHNi"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@acme.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=44, version=0}, acme.framework.entities.Authenticated{id=45, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -701,9 +701,9 @@ worker2UserAccount=46
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$NvvYjL9ITVrHEg/sHdS0de0aqP19IH/0g0.8f9ZjWjtJfM4gc8cSm"
+# 	- password: java.lang.String = "$2a$05$0/TN802oMTmCkjE67op6T.WO.MRW9oAiPOgBEDaOse9/915cqbdwq"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@acme.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=47, version=0}, acme.framework.entities.Authenticated{id=48, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -1017,9 +1017,9 @@ auditor1UserAccount=64
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$ZpPr6PGhDdk8ZqlFWU2uhOOTF4Ut46HV2Y6enz3F71xqvlH6XP9C."
+# 	- password: java.lang.String = "$2a$05$xymV2P3XLt82/J8bcxLOKuhIx7NF3KixUJLTq2Axwfs0QYcqaptzG"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=Auditor1@acme.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=Auditor1@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=65, version=0}, acme.framework.entities.Authenticated{id=66, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -1065,9 +1065,9 @@ auditor2UserAccount=67
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$i6WT15.1UBPVJWGimhTCduvecaDpq/JoRNMKTcCaILbMWfOrkkoni"
+# 	- password: java.lang.String = "$2a$05$WsQKHeFRtmyEtSsU7W3iJ.UnqjukjXRY5fclO3st299WIHHqsUcQq"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=Two, email=Auditor2@acme.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=Two, email=Auditor2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=68, version=0}, acme.framework.entities.Authenticated{id=69, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
