--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$Y72uIh8J4gXx2voKmLrf3OfDHTh3frHusPJ22Mw70chC9YCDqK0CW"
+# 	- password: java.lang.String = "$2a$05$1817fIpu.xURz/EIoPMMsOmsmhG8joqNYi8scBWq48riZGnzZFgQu"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ authenticatedUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "tester"
-# 	- password: java.lang.String = "$2a$05$XQWcTSGppyZQcqUzecPgCe5ukAri6NPtmpaEuNrVu6XVY2QcCCfwO"
+# 	- password: java.lang.String = "$2a$05$HP1ib4871mwL9z8AiFDahuOVwUV563EB9F2hBdWukVyIhmFCaRZlO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Tester, surname=Acme.com, email=tester@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Authenticated{id=4, version=0}]
@@ -74,7 +74,7 @@ administratorUserAccount=5
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$IF/pu.0cxHCqGwiWhTAss.uVK4p58RmfsbMUYMJGQ0CnfNoPhkgxm"
+# 	- password: java.lang.String = "$2a$05$Hgo1SdmqJlCGU2oXhKN1NuRx8bFO5Abxbo1drZY.ujtgt49Z.9jt."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=6, version=0}, acme.framework.entities.Authenticated{id=7, version=0}]
@@ -425,7 +425,7 @@ CompanyRecord01=29
 # 	- ceo: java.lang.String = "Sundar Pichai"
 # 	- activities: java.lang.String = "Desarrollo y mantenimiento de aplicaciones web"
 # 	- webSite: java.lang.String = "https://www.google.com"
-# 	- phone: java.lang.String = "+183 (1436) 1937403629"
+# 	- phone: acme.datatypes.Phone = <<+183 (14) 723840662>>
 # 	- email: java.lang.String = "google@google.com"
 # 	- incorporated: java.lang.Boolean = true
 # 	- stars: java.lang.Integer = 5
@@ -445,7 +445,7 @@ CompanyRecord02=30
 # 	- ceo: java.lang.String = "Bob Swan"
 # 	- activities: java.lang.String = "Desarrollo y producción de hardware"
 # 	- webSite: java.lang.String = "https://www.intel.es/content/www/es/es/homepage.html"
-# 	- phone: java.lang.String = "036295"
+# 	- phone: acme.datatypes.Phone = <<+34 991541312>>
 # 	- email: java.lang.String = "intel@intel.com"
 # 	- incorporated: java.lang.Boolean = true
 # 	- stars: java.lang.Integer = 4
@@ -560,7 +560,7 @@ employer1UserAccount=37
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$/D.FiY.FKLTZgv/0GmRSHumFRYELz6mIjSMkqvDcipoN/kIw/2q4K"
+# 	- password: java.lang.String = "$2a$05$ocm4Jbt0qnI7xxHOh8ldBuwDrfNZw7tOESe3Cc5Y4rdKNLnHahCwq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com, phone=<<+183 (14) 937403629>>)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=38, version=0}, acme.framework.entities.Authenticated{id=39, version=0}]
@@ -607,7 +607,7 @@ employer2UserAccount=40
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$9fRvZnc6.bJIkhNiGKvBHOx3/7t/BJXdY0wafaehwJNt1Wrw4L1LK"
+# 	- password: java.lang.String = "$2a$05$9XmS99V1G9qaMzNuWfw7t.EGxorGRzFEv7bqXLNn5E0iTsD9TWVmi"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=41, version=0}, acme.framework.entities.Authenticated{id=42, version=0}]
@@ -654,7 +654,7 @@ worker1UserAccount=43
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$1ZusMFh9Ztn8O1DlJXDI0OF/C6zxVV24lIH9zOKs2Ooju/CtFIHNi"
+# 	- password: java.lang.String = "$2a$05$PI8NcoZhG6oBy6AjEFYWb.QVeqrZ/dWq/HE2FQSgtezIJSOJvGUeC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=44, version=0}, acme.framework.entities.Authenticated{id=45, version=0}]
@@ -701,7 +701,7 @@ worker2UserAccount=46
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$0/TN802oMTmCkjE67op6T.WO.MRW9oAiPOgBEDaOse9/915cqbdwq"
+# 	- password: java.lang.String = "$2a$05$CdZeaar7gUyHn8c.O43ekuTKRVhI5uFC39eBfgjc.E4iuJ3c6Rs5y"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=47, version=0}, acme.framework.entities.Authenticated{id=48, version=0}]
@@ -1017,7 +1017,7 @@ auditor1UserAccount=64
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$xymV2P3XLt82/J8bcxLOKuhIx7NF3KixUJLTq2Axwfs0QYcqaptzG"
+# 	- password: java.lang.String = "$2a$05$THTCDw.G7pnBTvDvJqH/5uLamqXMiP1yLiqankPTS8VEEMMVbpUYS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=Auditor1@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=65, version=0}, acme.framework.entities.Authenticated{id=66, version=0}]
@@ -1065,7 +1065,7 @@ auditor2UserAccount=67
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$WsQKHeFRtmyEtSsU7W3iJ.UnqjukjXRY5fclO3st299WIHHqsUcQq"
+# 	- password: java.lang.String = "$2a$05$Sg3v6A3SfAA2J2/WPXOGdOQRad9GfCyXuK2Y9nQ35OBnNUQH.qWju"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=Two, email=Auditor2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=68, version=0}, acme.framework.entities.Authenticated{id=69, version=0}]
