--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$1817fIpu.xURz/EIoPMMsOmsmhG8joqNYi8scBWq48riZGnzZFgQu"
+# 	- password: java.lang.String = "$2a$05$gfL.OgDUPiZ6hFcf.dvBsOZ.DY76fcVfl/uI28EAM/xz9yrjTks7a"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ authenticatedUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "tester"
-# 	- password: java.lang.String = "$2a$05$HP1ib4871mwL9z8AiFDahuOVwUV563EB9F2hBdWukVyIhmFCaRZlO"
+# 	- password: java.lang.String = "$2a$05$NRyfVSvVNBBzvEYd1dEc0ui.85zhGFJC2dhfCD3XFSblZH9ICLLgq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Tester, surname=Acme.com, email=tester@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Authenticated{id=4, version=0}]
@@ -74,7 +74,7 @@ administratorUserAccount=5
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$Hgo1SdmqJlCGU2oXhKN1NuRx8bFO5Abxbo1drZY.ujtgt49Z.9jt."
+# 	- password: java.lang.String = "$2a$05$nNXR53dxn1j78fVHVJXbLezfJcDNzPfq5j4A3kB5M.N2x/jBlA44y"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=6, version=0}, acme.framework.entities.Authenticated{id=7, version=0}]
@@ -560,7 +560,7 @@ employer1UserAccount=37
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$ocm4Jbt0qnI7xxHOh8ldBuwDrfNZw7tOESe3Cc5Y4rdKNLnHahCwq"
+# 	- password: java.lang.String = "$2a$05$k/73wH01w0MUKmO18BGRUubvaztxRUvbZif5YqkzZp4Ruv8khiMsG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com, phone=<<+183 (14) 937403629>>)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=38, version=0}, acme.framework.entities.Authenticated{id=39, version=0}]
@@ -607,7 +607,7 @@ employer2UserAccount=40
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$9XmS99V1G9qaMzNuWfw7t.EGxorGRzFEv7bqXLNn5E0iTsD9TWVmi"
+# 	- password: java.lang.String = "$2a$05$A16vZ9l70tv4wC/VXNGcSOSD2tT7YMme8nOpVzSGDns0RxNjKbvS6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=41, version=0}, acme.framework.entities.Authenticated{id=42, version=0}]
@@ -654,7 +654,7 @@ worker1UserAccount=43
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$PI8NcoZhG6oBy6AjEFYWb.QVeqrZ/dWq/HE2FQSgtezIJSOJvGUeC"
+# 	- password: java.lang.String = "$2a$05$8KNWYVX9j4niBpwmdgfq6ORH22DoRv.xRMvCrL3oT9xc4Vrqq8WAy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=44, version=0}, acme.framework.entities.Authenticated{id=45, version=0}]
@@ -701,7 +701,7 @@ worker2UserAccount=46
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$CdZeaar7gUyHn8c.O43ekuTKRVhI5uFC39eBfgjc.E4iuJ3c6Rs5y"
+# 	- password: java.lang.String = "$2a$05$ruODgF0cyOZaQg8FqB9/yu0D0FAheVdUD/pT/.zqLI1Qj0LiwJdum"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=47, version=0}, acme.framework.entities.Authenticated{id=48, version=0}]
@@ -1017,7 +1017,7 @@ auditor1UserAccount=64
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$THTCDw.G7pnBTvDvJqH/5uLamqXMiP1yLiqankPTS8VEEMMVbpUYS"
+# 	- password: java.lang.String = "$2a$05$eAjvMoXp0drgW2yDoUU9FescmLY7JIBINKTH7.jqM0YNR8jjTr9OG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=Auditor1@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=65, version=0}, acme.framework.entities.Authenticated{id=66, version=0}]
@@ -1065,7 +1065,7 @@ auditor2UserAccount=67
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$Sg3v6A3SfAA2J2/WPXOGdOQRad9GfCyXuK2Y9nQ35OBnNUQH.qWju"
+# 	- password: java.lang.String = "$2a$05$lqvnnFeQOzPNZXK/6PHa.e/9zZH4kVwR0vKH04CVxt1XX69.etS5e"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=Two, email=Auditor2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=68, version=0}, acme.framework.entities.Authenticated{id=69, version=0}]
