--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$1817fIpu.xURz/EIoPMMsOmsmhG8joqNYi8scBWq48riZGnzZFgQu"
+# 	- password: java.lang.String = "$2a$05$eewDVy4yRXOPOM5CZVZpluZaladoDf69HHS6bJ8DVQnNRsslS31Zm"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ authenticatedUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "tester"
-# 	- password: java.lang.String = "$2a$05$HP1ib4871mwL9z8AiFDahuOVwUV563EB9F2hBdWukVyIhmFCaRZlO"
+# 	- password: java.lang.String = "$2a$05$XDznUqz88zNLSarGT6KukOl4.bAvnhZdo80wrccY8RLQakdRiDFdG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Tester, surname=Acme.com, email=tester@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Authenticated{id=4, version=0}]
@@ -74,7 +74,7 @@ administratorUserAccount=5
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$Hgo1SdmqJlCGU2oXhKN1NuRx8bFO5Abxbo1drZY.ujtgt49Z.9jt."
+# 	- password: java.lang.String = "$2a$05$hYXF0/xzqutWPi0JUkn.tuK65RP7qVh6cB9t.X3L3qwP.JwVqXcBG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=6, version=0}, acme.framework.entities.Authenticated{id=7, version=0}]
@@ -560,7 +560,7 @@ employer1UserAccount=37
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$ocm4Jbt0qnI7xxHOh8ldBuwDrfNZw7tOESe3Cc5Y4rdKNLnHahCwq"
+# 	- password: java.lang.String = "$2a$05$cB1IUniivLtt0ZS0D3i2HeOfiKOLv4NHCfWTZJy/j4zbq2itJ3Exu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com, phone=<<+183 (14) 937403629>>)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=38, version=0}, acme.framework.entities.Authenticated{id=39, version=0}]
@@ -607,7 +607,7 @@ employer2UserAccount=40
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$9XmS99V1G9qaMzNuWfw7t.EGxorGRzFEv7bqXLNn5E0iTsD9TWVmi"
+# 	- password: java.lang.String = "$2a$05$YxQ0.3KEERwrkV1VualvE.Wegoc8tNuk8.TrTS4qoeDFELHZTRj7a"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=41, version=0}, acme.framework.entities.Authenticated{id=42, version=0}]
@@ -654,7 +654,7 @@ worker1UserAccount=43
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$PI8NcoZhG6oBy6AjEFYWb.QVeqrZ/dWq/HE2FQSgtezIJSOJvGUeC"
+# 	- password: java.lang.String = "$2a$05$PvLHKXev9GJT9J1f1dDfFuHnCv.mqrZH080dW6fybIyJfwst/x34G"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=44, version=0}, acme.framework.entities.Authenticated{id=45, version=0}]
@@ -701,7 +701,7 @@ worker2UserAccount=46
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$CdZeaar7gUyHn8c.O43ekuTKRVhI5uFC39eBfgjc.E4iuJ3c6Rs5y"
+# 	- password: java.lang.String = "$2a$05$ft57CDo2wPDgxCDx7GVKpe.fTOD4D.vuH1tFHnMEd11ymUPQmYXLu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=47, version=0}, acme.framework.entities.Authenticated{id=48, version=0}]
@@ -1017,7 +1017,7 @@ auditor1UserAccount=64
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$THTCDw.G7pnBTvDvJqH/5uLamqXMiP1yLiqankPTS8VEEMMVbpUYS"
+# 	- password: java.lang.String = "$2a$05$rkCBtTKDGEnBOLhVeUnGp.6ZQ58xPOLlZbFsSH4ZgmVRitfnSW9rW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=Auditor1@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=65, version=0}, acme.framework.entities.Authenticated{id=66, version=0}]
@@ -1065,7 +1065,7 @@ auditor2UserAccount=67
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$Sg3v6A3SfAA2J2/WPXOGdOQRad9GfCyXuK2Y9nQ35OBnNUQH.qWju"
+# 	- password: java.lang.String = "$2a$05$bUh01VaUjWCRyQ4pY/tyN.cqtdnG4Ct5vmuVGeX1PQzaY7KlILgNy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=Two, email=Auditor2@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=68, version=0}, acme.framework.entities.Authenticated{id=69, version=0}]
@@ -1115,7 +1115,7 @@ auditRecord1=70
 # 	- title: java.lang.String = "Audit Record 1 "
 # 	- creationMoment: java.util.Date = <<Sun Nov 28 10:30:00 CET 2021>>
 # 	- body: java.lang.String = "Audit Record Description"
-# 	- published: java.lang.Boolean = true
+# 	- finalMode: java.lang.Boolean = true
 # 	- auditor: acme.entities.roles.Auditor = acme.entities.roles.Auditor{id=65, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=51, version=0}
 
@@ -1132,7 +1132,7 @@ auditRecord2=71
 # 	- title: java.lang.String = "Audit Record 2 "
 # 	- creationMoment: java.util.Date = <<Wed Dec 01 11:30:00 CET 2021>>
 # 	- body: java.lang.String = "Audit Record Description"
-# 	- published: java.lang.Boolean = true
+# 	- finalMode: java.lang.Boolean = true
 # 	- auditor: acme.entities.roles.Auditor = acme.entities.roles.Auditor{id=65, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=52, version=0}
 
@@ -1149,7 +1149,7 @@ auditRecord3=72
 # 	- title: java.lang.String = "Audit Record 3 "
 # 	- creationMoment: java.util.Date = <<Tue Nov 30 12:30:00 CET 2021>>
 # 	- body: java.lang.String = "Audit Record Description"
-# 	- published: java.lang.Boolean = true
+# 	- finalMode: java.lang.Boolean = true
 # 	- auditor: acme.entities.roles.Auditor = acme.entities.roles.Auditor{id=68, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=53, version=0}
 
